# vecr-garage

./: .env.example  .envrc.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  README_TEMPLATE.md
backend/: requirements.txt
backend-db-registration/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend-db-registration/src/: app.py  storage_monitor.py
backend-db-registration/src/db/: database.py
backend-db-registration/src/initialize/: generate_init_sql.py
backend-db-registration/src/models/: __init__.py  base.py  members.py  webhook_models.py
backend-db-registration/src/operations/: member_registration.py
backend-db-registration/src/scripts/: register_members.py  register_members_single.py  setup_webhook.py  test_webhook.py
backend-db-registration/src/services/: file_watcher.py  webhook_file_watcher.py
backend-db-registration/src/storage/: storage_client.py  storage_monitor.py
backend-db-registration/src/utils/: logging_config.py
backend-db-registration/src/validation/: __init__.py  yaml_validator.py
backend-db-registration/tests/: test_database.py  test_member_registration.py  test_rollback_functionality.py  test_storage_client.py  test_transaction_rollback.py  test_webhook.py
backend-llm-response/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend-llm-response/prompts/: times_topics.json
backend-llm-response/prompts/bot_characters/: example.txt  🤖🍡華扇.txt
backend-llm-response/src/: app.py
backend-llm-response/src/config/: __init__.py  webhook_config_parser.py  webhook_validator.py
backend-llm-response/src/config/discord/: __init__.py  config_loader.py  config_parser.py  (+1 more)
backend-llm-response/src/services/: claude_client.py  claude_discord_bridge.py  discord_bot.py  discord_notifier.py  llm_client.py  llm_discord_bridge.py  member_service.py  times_scheduler.py
backend/src/initialize/: generate_init_sql.py
ci-cd/: Dockerfile  requirements.txt
ci-cd/scripts/: format.sh  install-git-hooks.sh  lint-fix.sh  lint.sh  pre-commit-run.sh  typecheck.sh
config/: discord_tokens.example.json  discord_webhooks.example.json  discord_webhooks.json
database/: db_schema.sql
db-member/: member_db_schema.sql
docs/: README.md
docs/architecture/: database.md  services.md  webhook-automation.md
docs/development/: commands.md  testing.md  troubleshooting.md
docs/integrations/: authentication.md  claude-api.md  discord.md  minio.md
docs/security/: secrets-detection.md  secrets-management.md
makefiles/: backend-db-registration-tests.mk  backend-db-registration.mk  backend-llm-response.mk  ci.mk  claude.mk  discord.mk  integration.mk  samples.mk  secrets.mk  storage.mk  test-cases.mk  yml-file-operations.mk
member-database/: member_db_schema.sql
member-manager/: Dockerfile  README.md  app.py  database.py  manage.py  pyproject.toml  requirements.txt  storage_client.py  test_db_connection.py  yaml_generator.py
member-manager/accounts/: urls.py  views.py
member-manager/member_manager/: settings.py  urls.py
member-manager/static/css/: style.css
member-manager/static/js/: main.js
member-manager/templates/: base.html  database.html  index.html  login.html  table_detail.html  tables.html
member-manager/templates/accounts/: home.html  login.html
member-manager/tests/: test_db_connection.py  test_storage_connection.py
scripts/: minio-setup.sh  webhook-configurator.sh
storage/: Dockerfile  README.md  init.sh
storage/data/rules/: guidelines.md  team-rules.md
storage/sample_data/: sample.yml
(+27 files in other folders)
